[UTE_HUB - 104] Update UploadFile
